collect all layers in project or used in macros in backend
