# src/main/java/org/ironsight/wpplugin/macromachine/REST/Resources/LayerResource.java
@@ -3,16 +3,19 @@ package org.ironsight.wpplugin.macromachine.REST.Resources;
 import static org.ironsight.wpplugin.macromachine.operations.MappingAction.getNewEmptyAction;
 
 import io.swagger.v3.oas.annotations.Operation;
+import it.unimi.dsi.fastutil.Hash;
+import it.unimi.dsi.fastutil.objects.Object2ObjectOpenCustomHashMap;
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.MediaType;
-import java.util.Arrays;
-import java.util.List;
-import java.util.UUID;
+
+import java.util.*;
 import java.util.stream.Collectors;
+
 import org.ironsight.wpplugin.macromachine.REST.DTOs.ActionDTO;
 import org.ironsight.wpplugin.macromachine.REST.DTOs.LayerDTO;
 import org.ironsight.wpplugin.macromachine.operations.*;
 import org.ironsight.wpplugin.macromachine.operations.ValueProviders.*;
+import org.pepsoft.worldpainter.layers.Layer;
 
 @Path("/layers")
 @Produces(MediaType.APPLICATION_JSON)
@@ -22,7 +25,7 @@ public class LayerResource {
     private final MacroContainer macroContainer;
     private final MappingActionContainer actionContainer;
 
-    public LayerResource(InputOutputProvider ioProvider,  MappingActionContainer actionContainer, MacroContainer macros) {
+    public LayerResource(InputOutputProvider ioProvider, MappingActionContainer actionContainer, MacroContainer macros) {
         this.ioProvider = ioProvider;
         this.actionContainer = actionContainer;
         this.macroContainer = macros;
@@ -31,7 +34,8 @@ public class LayerResource {
 
     @GET
     public List<LayerDTO> getAllLayers() {
-        return ioProvider.getLayers().stream().map(LayerDTO::new).toList(); //FIXME this is all in project, not all-known-to-mm
+        //return ioProvider.getLayers().stream().map(LayerDTO::new).toList(); //FIXME this is all in project, not all-known-to-mm
+        return collectLayers();
     }
 
     @GET
@@ -39,4 +43,68 @@ public class LayerResource {
     public boolean existsLayerInProject(@PathParam("id") String id) {
         return true;
     }
+
+    private List<LayerDTO> collectLayers() {
+        HashMap<String, LayerDTO> layerIdToDTO = new HashMap<>(){
+            @Override
+            public LayerDTO put(String key, LayerDTO value) {
+                return super.put(key, value);
+            }
+        };
+        Object2ObjectOpenCustomHashMap<LayerDTO, Set<UUID>> layerToUsingMacros =
+                new Object2ObjectOpenCustomHashMap<>(new Hash.Strategy<>() {
+                    @Override
+                    public int hashCode(LayerDTO layer) {
+                        return layer.id().hashCode();
+                    }
+
+                    @Override
+                    public boolean equals(LayerDTO a, LayerDTO b) {
+                        if (a == null || b == null)
+                            return false;
+                        return Objects.equals(a.id(), b.id());
+                    }
+                });
+        // get layers in project
+        ioProvider.getLayers().stream().map(LayerDTO::new).forEach(dto -> {
+            layerToUsingMacros.put(dto, new HashSet<>());
+            layerIdToDTO.put(dto.id(), dto);
+        });
+
+        macroContainer.queryAll().forEach(macro ->
+                    Arrays.stream(macro.getExecutionUUIDs())
+                            .filter(actionContainer::queryContains)
+                            .map(actionContainer::queryById)
+                            .map(a -> new IMappingValue[]{a.getInput(), a.getOutput()})
+                            .flatMap(Arrays::stream)
+                            .filter(a -> a instanceof ILayerGetter)
+                            .map(a -> (ILayerGetter) a)
+                            .forEach(layerIo -> {
+                                var dto = layerIdToDTO.getOrDefault(layerIo.getLayerId(), null);
+                                if (dto == null) {
+                                    dto = new LayerDTO(layerIo.getLayerName(),
+                                            "unknown",
+                                            Layer.DataSize.NONE,
+                                            -1,
+                                            layerIo.getLayerId(),
+                                            false,
+                                            "unknown",
+                                            layerIo.isCustomLayer(),
+                                            new ArrayList<>()
+                                    );
+                                    layerToUsingMacros.put(dto, new HashSet<>());
+                                    layerIdToDTO.put(dto.id(), dto);
+                                }
+                                layerToUsingMacros.get(dto).add(macro.getUid());
+                            })
+        );
+
+        layerToUsingMacros.entrySet().forEach(entry -> {
+            entry.getKey().macrosUsingLayer().addAll(entry.getValue());
+                }
+        );
+
+        return layerToUsingMacros.keySet().stream().toList();
+    }
+
 }
